<resources>
    <string name="app_name">CalcutateTip</string>
    <string name="Radio1">10%</string>
    <string name="Radio2">15%</string>
    <string name="Radio3">18%</string>
    <string name="Radio4">Custom</string>
    <string name="Amount" />
    <string name="Bill">Bill Total</string>
    <string name="tip">Tip%</string>
    <string name="custom">Custom</string>
    <string name="tipvalue">Tip</string>
    <string name="total">Total</string>
    <string name="displaytip">0.00</string>
    <string name="displaytotal">0.00</string>
    <string name="exit">Exit</string>
    <string name="displayseek">25%</string>
    <string name="custom1">custom</string>
</resources>
